syntax = "proto3";

package product;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.product";

service CreateProduct {
  rpc handle (CreateProductRequest) returns (google.protobuf.Empty);
}

message CreateProductRequest {
  string id = 1;
  string brandId = 2;
  string name = 3;
  string description = 4;
  optional string imageUrl = 5;
  int32 price = 6;
  int32 quantity = 7;
}